@@ -1,5 +1,6 @@
 - Option to stop pollution from appearing on impassable tiles
 - Fix bombers not doing stack bombard and not showing as attack-capable on right-click menu
+- Fix crash when opening right-click menu with fleeing automated workers
 - Fix lethal ZoC setting allowing coastal fortresses to knock the last hit point off passing units
 - Fix dont_escort_unflagged_units option interfering with group movement of units
 - Put right-click menu sword icon on non-empty armies
